tests/error/comptime/trivially_relocate_values2.bz
// error: source address is null in call to '__builtin_trivially_relocate_values'
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
import malloc;

function test()
{
	(consteval {
		let p = malloc(int32, 1);
		defer free(p);

		__builtin_trivially_relocate_values(p, null as ?*mut int32, 1);
	});
}
